--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@google/genai": "^1.42.0",
     "lucide-react": "^0.574.0",
     "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.0"
+    "tailwind-merge": "^2.2.0",
+    "@clerk/clerk-react": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
