--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-  "dependencies": {
+"dependencies": {
     "react-dom": "^19.2.4",
     "react": "^19.2.4",
     "@google/genai": "^1.42.0",
     "lucide-react": "^0.574.0",
     "clsx": "^2.1.0",
     "tailwind-merge": "^2.2.0",
-    "@clerk/clerk-react": "^5.0.0"
+    "@clerk/clerk-react": "^5.0.0",
+    "stripe": "^14.0.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
