--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.0.0",
     "@clerk/localizations": "^3.36.0",
+    "@clerk/themes": "^2.4.54",
     "@google/genai": "^1.42.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.574.0",
