--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@clerk/localizations": "^3.36.0",
     "@clerk/themes": "^2.4.54",
     "@google/genai": "^1.42.0",
+    "@types/canvas-confetti": "^1.9.0",
+    "canvas-confetti": "^1.9.4",
     "clsx": "^2.1.0",
     "lucide-react": "^0.574.0",
     "react": "^19.2.4",
